tests/dataset/tpc-ds/compiler/c/q78.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int ss_sold_year;
  int ss_item_sk;
  int ss_customer_sk;
  double ratio;
  int store_qty;
  double store_wholesale_cost;
  double store_sales_price;
  int other_chan_qty;
  double other_chan_wholesale_cost;
  double other_chan_sales_price;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_sold_year;
  int ss_item_sk;
  int ss_customer_sk;
  int ss_qty;
  double ss_wc;
  double ss_sp;
} s_t;
typedef struct {
  int len;
  s_t *data;
} s_list_t;
s_list_t create_s_list(int len) {
  s_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(s_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_sold_year;
  int ws_item_sk;
  int ws_customer_sk;
  int ws_qty;
  double ws_wc;
  double ws_sp;
} w_t;
typedef struct {
  int len;
  w_t *data;
} w_list_t;
w_list_t create_w_list(int len) {
  w_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(w_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_sold_year;
  int cs_item_sk;
  int cs_customer_sk;
  int cs_qty;
  double cs_wc;
  double cs_sp;
} c_t;
typedef struct {
  int len;
  c_t *data;
} c_list_t;
c_list_t create_c_list(int len) {
  c_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(c_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_sold_year;
  int ss_item_sk;
  int ss_customer_sk;
  double ratio;
  int store_qty;
  double store_wholesale_cost;
  double store_sales_price;
  int other_chan_qty;
  double other_chan_wholesale_cost;
  double other_chan_sales_price;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q78_simplified_result;
static void test_TPCDS_Q78_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.ss_sold_year = 1998,
                            .ss_item_sk = 1,
                            .ss_customer_sk = 1,
                            .ratio = 1.25,
                            .store_qty = 10,
                            .store_wholesale_cost = 50.0,
                            .store_sales_price = 100.0,
                            .other_chan_qty = 8,
                            .other_chan_wholesale_cost = 40.0,
                            .other_chan_sales_price = 80.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q78_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q78_simplified_result.len; i3++) {
      if (test_TPCDS_Q78_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  s_t ss[] = {(s_t){.ss_sold_year = 1998,
                    .ss_item_sk = 1,
                    .ss_customer_sk = 1,
                    .ss_qty = 10,
                    .ss_wc = 50.0,
                    .ss_sp = 100.0}};
  int ss_len = sizeof(ss) / sizeof(ss[0]);
  w_t ws[] = {(w_t){.ws_sold_year = 1998,
                    .ws_item_sk = 1,
                    .ws_customer_sk = 1,
                    .ws_qty = 5,
                    .ws_wc = 25.0,
                    .ws_sp = 50.0}};
  int ws_len = sizeof(ws) / sizeof(ws[0]);
  c_t cs[] = {(c_t){.cs_sold_year = 1998,
                    .cs_item_sk = 1,
                    .cs_customer_sk = 1,
                    .cs_qty = 3,
                    .cs_wc = 15.0,
                    .cs_sp = 30.0}};
  int cs_len = sizeof(cs) / sizeof(cs[0]);
  result_item_list_t tmp4 = result_item_list_t_create(ss.len * ws.len * cs.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < ss_len; tmp6++) {
    s_t s = ss[tmp6];
    int tmp8 = 0;
    for (int tmp7 = 0; tmp7 < ws_len; tmp7++) {
      w_t w = ws[tmp7];
      if (!(w.ws_sold_year == s.ss_sold_year && w.ws_item_sk == s.ss_item_sk &&
            w.ws_customer_sk == s.ss_customer_sk)) {
        continue;
      }
      tmp8 = 1;
      int tmp10 = 0;
      for (int tmp9 = 0; tmp9 < cs_len; tmp9++) {
        c_t c = cs[tmp9];
        if (!(c.cs_sold_year == s.ss_sold_year &&
              c.cs_item_sk == s.ss_item_sk &&
              c.cs_customer_sk == s.ss_customer_sk)) {
          continue;
        }
        tmp10 = 1;
        if (!(((((w == 0) ? 0 : w.ws_qty)) > 0 ||
               (((c == 0) ? 0 : c.cs_qty)) > 0) &&
              s.ss_sold_year == 1998)) {
          continue;
        }
        tmp4.data[tmp5] = (result_item_t){
            .ss_sold_year = s.ss_sold_year,
            .ss_item_sk = s.ss_item_sk,
            .ss_customer_sk = s.ss_customer_sk,
            .ratio =
                ((double)s.ss_qty) / ((double)((((w == 0) ? 0 : w.ws_qty)) +
                                               (((c == 0) ? 0 : c.cs_qty)))),
            .store_qty = s.ss_qty,
            .store_wholesale_cost = s.ss_wc,
            .store_sales_price = s.ss_sp,
            .other_chan_qty =
                (((w == 0) ? 0 : w.ws_qty)) + (((c == 0) ? 0 : c.cs_qty)),
            .other_chan_wholesale_cost =
                (((w == 0) ? 0.0 : w.ws_wc)) + (((c == 0) ? 0.0 : c.cs_wc)),
            .other_chan_sales_price =
                (((w == 0) ? 0.0 : w.ws_sp)) + (((c == 0) ? 0.0 : c.cs_sp))};
        tmp5++;
      }
      if (!tmp10) {
        c_t c = (c_t){0};
        if (!(((((w == 0) ? 0 : w.ws_qty)) > 0 ||
               (((c == 0) ? 0 : c.cs_qty)) > 0) &&
              s.ss_sold_year == 1998)) {
        } else {
        }
        tmp4.data[tmp5] = (result_item_t){
            .ss_sold_year = s.ss_sold_year,
            .ss_item_sk = s.ss_item_sk,
            .ss_customer_sk = s.ss_customer_sk,
            .ratio =
                ((double)s.ss_qty) / ((double)((((w == 0) ? 0 : w.ws_qty)) +
                                               (((c == 0) ? 0 : c.cs_qty)))),
            .store_qty = s.ss_qty,
            .store_wholesale_cost = s.ss_wc,
            .store_sales_price = s.ss_sp,
            .other_chan_qty =
                (((w == 0) ? 0 : w.ws_qty)) + (((c == 0) ? 0 : c.cs_qty)),
            .other_chan_wholesale_cost =
                (((w == 0) ? 0.0 : w.ws_wc)) + (((c == 0) ? 0.0 : c.cs_wc)),
            .other_chan_sales_price =
                (((w == 0) ? 0.0 : w.ws_sp)) + (((c == 0) ? 0.0 : c.cs_sp))};
        tmp5++;
      }
    }
    if (!tmp8) {
      w_t w = (w_t){0};
      int tmp12 = 0;
      for (int tmp11 = 0; tmp11 < cs_len; tmp11++) {
        c_t c = cs[tmp11];
        if (!(c.cs_sold_year == s.ss_sold_year &&
              c.cs_item_sk == s.ss_item_sk &&
              c.cs_customer_sk == s.ss_customer_sk)) {
          continue;
        }
        tmp12 = 1;
        if (!(((((w == 0) ? 0 : w.ws_qty)) > 0 ||
               (((c == 0) ? 0 : c.cs_qty)) > 0) &&
              s.ss_sold_year == 1998)) {
          continue;
        }
        tmp4.data[tmp5] = (result_item_t){
            .ss_sold_year = s.ss_sold_year,
            .ss_item_sk = s.ss_item_sk,
            .ss_customer_sk = s.ss_customer_sk,
            .ratio =
                ((double)s.ss_qty) / ((double)((((w == 0) ? 0 : w.ws_qty)) +
                                               (((c == 0) ? 0 : c.cs_qty)))),
            .store_qty = s.ss_qty,
            .store_wholesale_cost = s.ss_wc,
            .store_sales_price = s.ss_sp,
            .other_chan_qty =
                (((w == 0) ? 0 : w.ws_qty)) + (((c == 0) ? 0 : c.cs_qty)),
            .other_chan_wholesale_cost =
                (((w == 0) ? 0.0 : w.ws_wc)) + (((c == 0) ? 0.0 : c.cs_wc)),
            .other_chan_sales_price =
                (((w == 0) ? 0.0 : w.ws_sp)) + (((c == 0) ? 0.0 : c.cs_sp))};
        tmp5++;
      }
      if (!tmp12) {
        c_t c = (c_t){0};
        if (!(((((w == 0) ? 0 : w.ws_qty)) > 0 ||
               (((c == 0) ? 0 : c.cs_qty)) > 0) &&
              s.ss_sold_year == 1998)) {
        } else {
        }
        tmp4.data[tmp5] = (result_item_t){
            .ss_sold_year = s.ss_sold_year,
            .ss_item_sk = s.ss_item_sk,
            .ss_customer_sk = s.ss_customer_sk,
            .ratio =
                ((double)s.ss_qty) / ((double)((((w == 0) ? 0 : w.ws_qty)) +
                                               (((c == 0) ? 0 : c.cs_qty)))),
            .store_qty = s.ss_qty,
            .store_wholesale_cost = s.ss_wc,
            .store_sales_price = s.ss_sp,
            .other_chan_qty =
                (((w == 0) ? 0 : w.ws_qty)) + (((c == 0) ? 0 : c.cs_qty)),
            .other_chan_wholesale_cost =
                (((w == 0) ? 0.0 : w.ws_wc)) + (((c == 0) ? 0.0 : c.cs_wc)),
            .other_chan_sales_price =
                (((w == 0) ? 0.0 : w.ws_sp)) + (((c == 0) ? 0.0 : c.cs_sp))};
        tmp5++;
      }
    }
  }
  tmp4.len = tmp5;
  result_item_list_t result = tmp4;
  printf("[");
  for (int i13 = 0; i13 < result.len; i13++) {
    if (i13 > 0)
      printf(",");
    result_item_t it = result.data[i13];
    printf("{");
    _json_string("ss_sold_year");
    printf(":");
    _json_int(it.ss_sold_year);
    printf(",");
    _json_string("ss_item_sk");
    printf(":");
    _json_int(it.ss_item_sk);
    printf(",");
    _json_string("ss_customer_sk");
    printf(":");
    _json_int(it.ss_customer_sk);
    printf(",");
    _json_string("ratio");
    printf(":");
    _json_float(it.ratio);
    printf(",");
    _json_string("store_qty");
    printf(":");
    _json_int(it.store_qty);
    printf(",");
    _json_string("store_wholesale_cost");
    printf(":");
    _json_float(it.store_wholesale_cost);
    printf(",");
    _json_string("store_sales_price");
    printf(":");
    _json_float(it.store_sales_price);
    printf(",");
    _json_string("other_chan_qty");
    printf(":");
    _json_int(it.other_chan_qty);
    printf(",");
    _json_string("other_chan_wholesale_cost");
    printf(":");
    _json_float(it.other_chan_wholesale_cost);
    printf(",");
    _json_string("other_chan_sales_price");
    printf(":");
    _json_float(it.other_chan_sales_price);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q78_simplified_result = result;
  test_TPCDS_Q78_simplified();
  return 0;
}
